updated the HTML to include search result

--- a/landingPageTester/Templates/index.html
+++ b/landingPageTester/Templates/index.html
@@ -40,7 +40,29 @@
                         </form>
                     </div>
                 </div>
+            </div>
 
+            <div class="container">
+                
+                    <div class="result-section mt-4 col-md-8 mx-auto">
+                        <h5 class="text-secondary display-6">Search Result</h5>
+                        <div class="result card my-3">
+                                <div class="col-8 col-md-10">
+
+                                    <!--html not responding to css for span class-->
+                                    <p>URL: <span class="tab">https://www.google.com </span><br>
+                                        Name:<span style="font-weight: bold;font-size: 30px;font-family: Italics;padding-left: 10px;">Google</span> <br>
+                                        Traffic (24hours):<span style="font-weight: bold;font-size: 30px;font-family: Italics;padding-left: 10px;">23456</span> 
+                                    </p>
+                                </div>
+                            
+                        </div>
+                    </div>
+                
+            </div>
+
+            <div class="container">
+                <div class="row">
                 <div class="result-section mt-4 col-md-8 mx-auto">
                     <h5 class="text-secondary display-6">Result Analysis</h5>
                     <div class="result card my-3">
@@ -82,6 +104,8 @@
                         </div>
                     </div>
                 </div>
+                </div>
+            </div>
             </div>
         </div>
 
